--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,4 +24,4 @@ jobs:
                 chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew test --info -Dselenide.headless=true
+        run: ./gradlew test --info -Selenide.headless=true
