--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "io.freefair.lombok" version "8.2.2"
 }
 
-group 'ru.netology'
+group 'ru.ontology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
@@ -22,6 +22,7 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.3.0'
     testImplementation 'com.google.code.gson:gson:2.8.6'
 }
+
 
 test {
     useJUnitPlatform()
